src/test/ui/no-patterns-in-args-2.stderr
error[E0642]: patterns aren't allowed in methods without bodies
  --> $DIR/no-patterns-in-args-2.rs:6:11
   |
LL |     fn f2(&arg: u8);
   |           ^^^^

error: patterns aren't allowed in methods without bodies
  --> $DIR/no-patterns-in-args-2.rs:4:11
   |
LL |     fn f1(mut arg: u8);
   |           ^^^^^^^
   |
note: lint level defined here
  --> $DIR/no-patterns-in-args-2.rs:1:9
   |
LL | #![deny(patterns_in_fns_without_body)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #35203 <https://github.com/rust-lang/rust/issues/35203>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0642`.
